fixed overflow issue and improved blog cleanup

--- a/app/_component/_themeAble/_card/_infoCard/infoCard.css
+++ b/app/_component/_themeAble/_card/_infoCard/infoCard.css
@@ -70,7 +70,6 @@ heading-background{
 c-textblob{
     display: block;
     max-width: 100%;
-    overflow: hidden;
     white-space: nowrap;
     width: auto;
     margin-bottom: 5px;
